# color-generator

./: .gitignore  CMakeLists.txt  README.md  app.d  color_space_widget.d  design.glade  dscanner.ini  dub.json  main.d  palette_widget.d  utils.d
inc/: app_frame.h  color_picker.h  palette.h  palette_widget.h  utils.h
scripts/linux/: build_appimage.sh  color-generator.desktop
scripts/windows/: setup.iss
src/: app.d  app_frame.cpp  color_picker.cpp  color_picker.d  color_space_widget.d  main.cpp  palette.cpp  palette.d  palette_widget.cpp  palette_widget.d  utils.cpp  utils.d
